--- a/cifar_10/Trabalho2.ipynb
+++ b/cifar_10/Trabalho2.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Código referência:\n",
+    "    https://extrapolations.dev/blog/2013/07/basic-neural-network-python/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -335,8 +343,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entendendo uma RN\n",
+    "\n",
+    "Um RN neural pode ser entendida como uma multiplicação de matriz. O Código a seguir faz uso dessa característica para realizar o foward da RN.\n",
+    "\n",
+    "A playlist a seguir ajuda nessa explicação:\n",
+    "\n",
+    "https://www.youtube.com/playlist?list=PLiaHhY2iBX9hdHaRr6b7XevZtgZRa1PoU"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,6 +395,17 @@
     "\n",
     "    def rand_init(self, l_in, l_out):\n",
     "        \n",
+    "        \n",
+    "        # Cria um array com amostras aleatórias para uma distribuição uniforme de [0,1]\n",
+    "        # Uniform Distribution -> Retrato de muitos casos. Serão gerados valores distintos, mas com grande\n",
+    "        # concentração nas proximidades do valor 0.5. Logo, se o problema segue a distribuição normal para tethas,\n",
+    "        # e provavelmente segue, a grande maioria dos tethas são iniciados muito próximo do valore ideal. Ficando um \n",
+    "        # número muito reduzido de possibilidades de um pior caso, como por exemplo o tetha foi iniciado próximo a 0 \n",
+    "        # e seu valor ideal é próximo a 1.\n",
+    "        \n",
+    "        # O epsilon_init transfere a distribuição para as proximidades da origem, ou seja, os tethas serão pequenos\n",
+    "        # valores, próximos a zero, positivos ou negativos.\n",
+    "        \n",
     "        self.epsilon_init = (math.sqrt(6))/(math.sqrt(l_in + l_out))        \n",
     "        result = np.random.rand(l_out, l_in + 1) * 2 * self.epsilon_init - self.epsilon_init\n",
     "\n",
@@ -399,9 +431,13 @@
     "            ones = np.ones(m).reshape(m,1)\n",
     "\n",
     "        # Input layer\n",
+    "        # np.hstack -> Take a sequence of arrays and stack them horizontally to make a single array\n",
+    "        # ones -> O Bias é colocado como uma nova feature para cada amostra, o valor dessa feature 'fake' é 1, logo\n",
+    "        # Apenas o peso (que será aprendido) importará.\n",
     "        a1 = np.hstack((ones, X))\n",
     "\n",
     "        # Hidden Layer\n",
+    "        #np.dot(matA, matB) = [a11*b11 + a12*b12 + a13*b13, a21*b21 + a22*b22 + a23*b23 ...]\n",
     "        z2 = np.dot(t1, a1.T)\n",
     "        a2 = self.activation_func(z2)\n",
     "        a2 = np.hstack((ones, a2.T))\n",
@@ -417,14 +453,35 @@
     "        t1, t2 = self.unpack_thetas(thetas, input_layer_size, hidden_layer_size, num_labels)\n",
     "\n",
     "        m = X.shape[0]\n",
+    "        \n",
+    "        # np.eye -> Matriz identidade. \n",
+    "        # Y -> Matriz alvo das classes. 1 apenas para a classe verdadeira, 0 para as demais.        \n",
+    "        # Aprendizado supervisionado (interessante por no relatório, pq faz parte da disciplina)\n",
     "        Y = np.eye(num_labels)[y]\n",
     "        \n",
     "        _, _, _, _, h = self._forward(X, t1, t2)\n",
     "        \n",
+    "        # Custo positivo -> Custo da classes esperada\n",
+    "        # Y = 0 para classes não esperadas, logo zera o custo positivo, não influencia o custo positivo.\n",
+    "        \n",
+    "        # Esperado h = 1 -> log(1) = 0. 100% para a classe veradeira significa que o custo positivo é zero.\n",
+    "        # ln(x) < 0, para x E [0, 1] -> A Imagem da sigmóide é [0, 1].\n",
+    "        # Logo o costPositive necessita do (-) para se tornar positivo.\n",
     "        costPositive = -Y * np.log(h).T        \n",
+    "        \n",
+    "        \n",
+    "        # Custo negativo -> Custo das classes que não são a esperada.\n",
+    "        # Y = 1 para a classe esperada, logo zera o custo negativo, não influencia o custo negativo.\n",
+    "        # Esperado h = 0 -> log(1 - 0) = 0. 0% para classe falsa significa que o custo negativo é zero.\n",
+    "        # matA * matB = [a1*b1, a2*b2, a3*b3 ...]\n",
+    "        # O costNegative será negativo        \n",
     "        costNegative = (1 - Y) * np.log(1 - h).T \n",
+    "        \n",
+    "        # cost será a soma dos módulos dos custos positivo e negativo.\n",
+    "        # Assim o cost será sempre positivo\n",
     "        cost = costPositive - costNegative\n",
     "        \n",
+    "        # -> Média do custo\n",
     "        J = np.sum(cost) / m # -> Média do custo\n",
     "\n",
     "        if reg_lambda != 0:\n",
@@ -454,10 +511,27 @@
     "        \n",
     "        for i, row in enumerate(X):\n",
     "            \n",
+    "            # Propaga para cadas amostra.\n",
     "            a1, z2, a2, z3, a3 = self._forward(row, t1, t2)\n",
     "            \n",
+    "            # Diferença entre o resultado esperado e o obtido. É o erro da camada de saída. \n",
     "            d3 = a3 - Y[i, :].T \n",
+    "            \n",
+    "            # Multiplico o erro pelos pesos. E multiplico pela derivada da sigmóide (Mas, pq z2?)\n",
+    "            # Erro da camada oculta é:\n",
+    "            # erro da camada l = pesos da camada l 'matrix multiplication' erro camada (l + 1) vezes\n",
+    "            # a derivada da função de ativação da camada l.\n",
+    "            # Segundo regra da cadeia.\n",
+    "            # np.dot(t2f.T, d3) -> residual, devivada da equação linear, direção da descida.\n",
     "            d2 = np.dot(t2f.T, d3) * self.activation_func_prime(z2)\n",
+    "            \n",
+    "            # The newaxis object can be used in all slicing operations to create an axis of length one. \n",
+    "            # newaxis is an alias for ‘None’, and ‘None’ can be used in place of this with the same result.\n",
+    "            # d3 é o erro para cada classe\n",
+    "            # a2 é cada 'feature', ou saída de neurônio.\n",
+    "            # d3 . a2 -> Matriz com cada 'feature' * erro.\n",
+    "            # O Delta a ser utilizado no gradiente é a somatória do erro da camada seguinte mutiplicado \n",
+    "            # pelo valor de saída da camada atual.\n",
     "            Delta2 += np.dot(d3[np.newaxis].T, a2[np.newaxis])\n",
     "            Delta1 += np.dot(d2[np.newaxis].T, a1[np.newaxis])\n",
     "\n",
