--- a/captcha/Captcha.ipynb
+++ b/captcha/Captcha.ipynb
@@ -20,8 +20,9 @@
       "version": "3.8.2"
     },
     "colab": {
-      "name": "Captcha_maisa.ipynb",
+      "name": "Captcha.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -34,7 +35,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MatteusStranger/final_project_ia/blob/master/captcha/Captcha_maisa.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MatteusStranger/final_project_ia/blob/master/captcha/Captcha.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -108,7 +109,7 @@
         "from keras.callbacks import EarlyStopping\n",
         "from sklearn.metrics import confusion_matrix\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +140,7 @@
         "  #!gdown --id \"18pvA4cs0EKfd9ajJbqYqJxi4w77bivxh\"\n",
         "  #!unzip -q dataset"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,7 +191,7 @@
         "# Tamanho da palavra no captcha\n",
         "size_word = 5"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +238,7 @@
         "    \n",
         "    return files"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +303,7 @@
         "\n",
         "    return X, y"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +335,7 @@
         "print('Número de imagens no dataset randômico: ' + str(len(name_captcha_files_rand)))\n",
         "X_train_random, y_train_random = read_dataset_batch(symbols, name_captcha_files_rand, captcha_dir = name_dir_random)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +372,7 @@
         "print('Número de imagens no dataset permutação: ' + str(len(name_captcha_files_perm)))\n",
         "X_train_perm, y_train_perm = read_dataset_batch(symbols, name_captcha_files_perm, captcha_dir = name_dir_perm)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +411,7 @@
         "\n",
         "X_test, y_test = read_dataset_batch(symbols, name_captcha_files_test, captcha_dir = name_dir_test)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +450,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -549,7 +550,7 @@
         "    model.summary()\n",
         "    return model\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +582,7 @@
         "validation_split=0.2\n",
         "size_batch_files = 101000"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -655,7 +656,7 @@
         "    \n",
         "    plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -687,7 +688,7 @@
         "callbacks_list = [earlystop,checkpoint]\n",
         "\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -726,7 +727,7 @@
         "history_random = net_random.fit(X_train_random, [y_train_random[0], y_train_random[1], y_train_random[2], y_train_random[3], y_train_random[4]], epochs=n_epoch, validation_split=validation_split, batch_size=size_batch_train, callbacks=callbacks_list)\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1821,7 +1822,7 @@
       "source": [
         "plot_model_history(history_random)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1864,7 +1865,7 @@
         "history_perm = net_perm.fit(X_train_perm, [y_train_perm[0], y_train_perm[1], y_train_perm[2], y_train_perm[3], y_train_perm[4]], epochs=n_epoch, validation_split=validation_split, batch_size=size_batch_train, callbacks=callbacks_list)\n",
         "  "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2955,7 +2956,7 @@
       "source": [
         ""
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2972,7 +2973,7 @@
       "source": [
         "plot_model_history(history_perm)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3038,7 +3039,7 @@
         "    \n",
         "    return capt"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3087,7 +3088,7 @@
         "    plt.xlabel('Predicted label')\n",
         "    plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3147,7 +3148,7 @@
         "    \n",
         "    return accuracy, d_accuracy"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3183,7 +3184,7 @@
         "    plt.axis('off')    \n",
         "    plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3226,7 +3227,7 @@
         "\n",
         "net_random.evaluate(X_test, [y_test[0], y_test[1], y_test[2], y_test[3], y_test[4]])\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3273,7 +3274,7 @@
       "source": [
         "accuracy, d_accuracy = metrics(X_test, [y_test[0], y_test[1], y_test[2], y_test[3], y_test[4]], net_random)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3369,7 +3370,7 @@
       "source": [
         "print (\"Accuracy on test data is: %0.2f, acc_d1= %0.2f, acc_d2= %0.2f, acc_d3= %0.2f, acc_d4= %0.2f, acc_d5= %0.2f\"%(accuracy, d_accuracy[0], d_accuracy[1], d_accuracy[2], d_accuracy[3], d_accuracy[4]))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3395,7 +3396,7 @@
         "# Exemplo de predição\n",
         "predict_sample(net_random);"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3446,7 +3447,7 @@
         "\n",
         "  "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3463,7 +3464,7 @@
       "source": [
         "plot_layers_output(net_random)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3509,7 +3510,7 @@
         "\n",
         "net_perm.evaluate(X_test, [y_test[0], y_test[1], y_test[2], y_test[3], y_test[4]])"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3556,7 +3557,7 @@
       "source": [
         "accuracy, d_accuracy = metrics(X_test, [y_test[0], y_test[1], y_test[2], y_test[3], y_test[4]], net_perm)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3652,7 +3653,7 @@
       "source": [
         "print (\"Accuracy on test data is: %0.2f, acc_d1= %0.2f, acc_d2= %0.2f, acc_d3= %0.2f, acc_d4= %0.2f, acc_d5= %0.2f\"%(accuracy, d_accuracy[0], d_accuracy[1], d_accuracy[2], d_accuracy[3], d_accuracy[4]))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3678,7 +3679,7 @@
         "# Exemplo de predição\n",
         "predict_sample(net_perm);"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3709,7 +3710,7 @@
       "source": [
         "plot_layers_output(net_perm)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
